--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,17 +1,30 @@
 <main>
-  <section>
+  <section class="form-section">
     <img src="/assets/svg/logo.svg" alt="Logo" />
-    <h2></h2>
-    <button>Login Now</button>
+    <h2>{{ title }}</h2>
 
-    <div>
-      <span>or</span>
+    <ng-content></ng-content>
+
+    <div class="btn-wrapper">
+      <button class="btn-primary">
+        <!-- (click)="submit()"
+      [disabled]="disablePrimaryBtn" -->
+
+        {{ primaryButtonText }}
+      </button>
+      <div class="divider">
+        <div></div>
+        <span>or</span>
+        <div></div>
+      </div>
+      <button class="btn-secondary">
+        <!-- (click)="navigate()" -->
+        {{ secondaryButtonText }}
+      </button>
     </div>
-
-    <button>SignUp Now</button>
   </section>
 
-  <section>
+  <section class="main-section">
     <h1>You Should, MoveIt!</h1>
     <img src="/assets/svg/main-illustration.svg" alt="Main Illustration" />
   </section>
