--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,32 @@
-<app-default-login-layout></app-default-login-layout>
+<app-default-login-layout
+  title="Login into your account"
+  primaryButtonText="Login Now"
+  secondaryButtonText="SignUp Now"
+  (submit)="submit()"
+  (navigate)="navigate()"
+  [disablePrimaryButton]="!loginForm.valid"
+>
+  <form [formGroup]="loginForm">
+    <app-input-primary
+      formControlName="email"
+      inputName="email"
+      type="email"
+      label="Email"
+      placeholder="johndoe@gmail.com"
+    >
+      <img src="/assets/svg/email-icon.svg" alt="Email Icon" />
+    </app-input-primary>
+
+    <app-input-primary
+      formControlName="password"
+      inputName="password"
+      type="password"
+      label="Password"
+      placeholder="1234"
+    >
+      <img src="/assets/svg/password-icon.svg" alt="Email Icon" />
+    </app-input-primary>
+
+    <span>forgout password</span>
+  </form>
+</app-default-login-layout>
